# python-exercises

./: LICENSE  Makefile  README.md  pyproject.toml
essential/src/: ascii_art.py  factorial.py  hex_to_dec.py  json_encode_decode.py  messengers.py  messengers_exceptions.py  primes.py  rock_paper_scissors.py  threads.py
essential/tests/: ascii_art_test.py  hextodec_test.py  json_encode_decode_test.py
fundamentals/: Makefile
fundamentals/src/: safe_check.py  sort_dictionary.py  transform_string.py
fundamentals/tests/: sort_dictionary_test.py  transform_string_test.py
src/: __init__.py  custom_exception.py  employes.py  extend_builtin_class.py  factorial.py  functional.py  hex_to_dec.py
tests/: ascii_art_test.py  employes_test.py  factorial_test.py  hextodec_test.py  primes_test.py  rock_paper_scissors_test.py  safe_check_test.py  test_extend_builtin_class.py  transform_string_test.py
